fix contrast issues and projects viability in small screens

--- a/css/components/header.css
+++ b/css/components/header.css
@@ -23,7 +23,7 @@
 }
 
 .header__toggler {
-  border: 2px solid var(--bg-color);
+  border: 2px solid var(--color-secondary);
   padding-inline: var(--space-3);
 }
 
